<resources>
    <string name="app_name">Vietnamworks Job App</string>

    <!-- common-->
    <string name="any">Any</string>
    <string name="version">Version %s</string>
    <string name="oops_something_wrong">Oops something wrong. Please try again later</string>

    <!-- activity title -->
    <string name="title_cards">Matched jobs</string>

    <!--button-->
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="ok">OK</string>


    <string name="get_started">Getting started</string>
    <string name="already_have_account">Already have account</string>
    <string name="register_new_account">Sign up</string>

    <string name="question_job_title">What\'s your job title?</string>
    <string name="question_job_location">Where do you prefer working?</string>
    <string name="location_saigon">Ho Chi Minh</string>
    <string name="location_hanoi">Ha Noi</string>
    <string name="location_danang">Da Nang</string>
    <string name="location_other">Others</string>
    <string name="question_job_industry">What\'s your industry?</string>
    <string name="jobtitle_input_hint">Your job title</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    
    <!-- job detail-->
    <string name="work_location">Work location: %s</string>
    <string name="summary_job_detail">Summary job detail</string>
    <string name="job_level">Job level</string>
    <string name="job_category">Job category</string>
    <string name="preferred_language">Preferred language</string>
    <string name="about_our_company">About our company</string>
    <string name="contact_person">Contact person: %s</string>
    <string name="company_size">Company size: %s</string>
    <string name="salary">Salary: %s</string>
    <string name="negotiable">Negotiable</string>
    <string name="required_skills">You Should Be Best At</string>
    <string name="job_desc">What You Will Do</string>
    <string name="job_requirement">What You Are Good At</string>

    <!--login-->
    <string name="email">Email</string>
    <string name="email_hint">your@email.com</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="password_is_required">Password is required</string>
    <string name="email_is_required">Email is required</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="invalid_credential">Incorrect username or password</string>

    <!-- apply job-->
    <string name="cover_letter">Cover letter</string>
    <string name="update_cv_title">Update CV</string>
    <string name="use_current_cv">Use current CV</string>
    <string name="upload_new_cv">Upload new CV</string>
    <string name="cover_letter_is_required">Cover letter is required</string>
    <string name="upload_from_sdcard">Upload from sdcard</string>
    <string name="upload_from_dropbox">Upload from DropBox</string>
    <string name="fail_to_upload_file">Fail to upload file</string>
    <string name="file_size_too_big">File size must be less than %s</string>
    <string name="file_type_is_not_support">File type must be %s</string>
    <string name="invalid_file">Fail to get file</string>
    <string name="cv_is_required">CV is mandatory</string>
    <string name="apply_job_success">Apply job successfully</string>

    <!-- register -->
    <string name="register">Register</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="firstname_is_required">First name is required</string>
    <string name="lastname_is_required">Last name is required</string>
    <string name="duplicated_email">Email address already in use</string>
    <string name="register_successful">Your account has been created. Please check your email to get password</string>
</resources>
