<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorSemiAlpha"
    android:onClick="nothing"
    android:orientation="vertical"
    android:gravity="top">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_padding_8x"
        android:layout_marginRight="@dimen/base_padding_4x"
        android:layout_marginLeft="@dimen/base_padding_4x">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/base_padding_4x"
            android:paddingTop="@dimen/base_padding_2x"
            android:paddingRight="@dimen/base_padding_4x"
            android:paddingBottom="@dimen/base_padding_2x">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                style="@style/Text.Small.Muted"
                android:layout_marginLeft="@dimen/base_padding" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/email"
                style="@style/Text.Medium"
                android:hint="@string/email_hint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firstname"
                style="@style/Text.Small.Muted"
                android:layout_marginLeft="@dimen/base_padding" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/firstname"
                style="@style/Text.Medium"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lastname"
                style="@style/Text.Small.Muted"
                android:layout_marginLeft="@dimen/base_padding" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/lastname"
                style="@style/Text.Medium"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/error"
                android:layout_marginTop="@dimen/base_padding"
                style="@style/Text.Small.Error" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/progressBar_register" />
                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:id="@+id/btn_cancel_register" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:id="@+id/btn_register"
                    android:layout_gravity="right" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>