<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#0e707b">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_job_location"
                android:id="@+id/textView"
                style="@style/Text.Title.Light"
                android:layout_gravity="center_horizontal|top"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:layout_marginLeft="@dimen/base_padding_4x"
                android:layout_marginRight="@dimen/base_padding_4x" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_small_height"
                android:text="@string/next"
                android:id="@+id/btn_next"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                style="@style/RoundButton.CTA"
                android:paddingLeft="@dimen/button_small_padding"
                android:paddingRight="@dimen/button_small_padding"
                android:layout_margin="@dimen/base_padding_4x" />

            <Button
                style="@style/RoundButton.Light"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_small_height"
                android:text="@string/skip"
                android:id="@+id/btn_skip"
                android:paddingLeft="@dimen/button_small_padding"
                android:paddingRight="@dimen/button_small_padding"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="@dimen/base_padding_4x"
                android:onClick="onSkip" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_saigon"
                android:id="@+id/cb_hcm"
                android:layout_alignParentTop="true"
                android:layout_alignLeft="@+id/btn_skip"
                android:layout_alignStart="@+id/btn_skip"
                style="@style/Text.Title.Light"
                android:layout_marginBottom="@dimen/base_padding_4x"
                android:button="@drawable/checkbox"
                android:paddingLeft="@dimen/base_padding_2x" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_hanoi"
                android:id="@+id/cb_hn"
                android:layout_below="@+id/cb_hcm"
                android:layout_alignLeft="@+id/cb_hcm"
                android:layout_alignStart="@+id/cb_hcm"
                style="@style/Text.Title.Light"
                android:layout_marginBottom="@dimen/base_padding_4x"
                android:button="@drawable/checkbox"
                android:paddingLeft="@dimen/base_padding_2x" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_danang"
                android:id="@+id/cb_danang"
                android:layout_below="@+id/cb_hn"
                android:layout_alignLeft="@+id/cb_hn"
                android:layout_alignStart="@+id/cb_hn"
                style="@style/Text.Title.Light"
                android:layout_marginBottom="@dimen/base_padding_4x"
                android:button="@drawable/checkbox"
                android:paddingLeft="@dimen/base_padding_2x" />

            <!--
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_other"
                android:id="@+id/cb_other_location"
                android:layout_centerVertical="true"
                android:layout_alignLeft="@+id/cb_danang"
                android:layout_alignStart="@+id/cb_danang"
                style="@style/Text.Title.Light"
                android:layout_below="@+id/cb_danang"
                android:button="@drawable/checkbox"
                android:paddingLeft="@dimen/base_padding_2x" />
               -->

        </RelativeLayout>
    </LinearLayout>

</FrameLayout>