<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_job_title"
                android:id="@+id/textView"
                style="@style/Text.Title.Light"
                android:layout_gravity="center_horizontal|top"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_small_height"
                android:text="@string/next"
                android:id="@+id/button3"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/small_button"
                style="@style/Text.Medium.Light"
                android:paddingLeft="@dimen/button_small_padding"
                android:paddingRight="@dimen/button_small_padding"
                android:layout_margin="@dimen/base_padding_4x" />

            <Button
                style="@style/Text.Medium.Light"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_small_height"
                android:text="@string/skip"
                android:id="@+id/button4"
                android:background="@drawable/small_button"
                android:paddingLeft="@dimen/button_small_padding"
                android:paddingRight="@dimen/button_small_padding"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="@dimen/base_padding_4x" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                style="@style/Text.Title.Light"
                android:inputType="text"
                android:background="@drawable/rounded_input"
                android:paddingLeft="@dimen/button_large_corner"
                android:paddingRight="@dimen/button_large_corner"
                android:layout_gravity="center"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/base_padding_4x"
                android:layout_marginRight="@dimen/base_padding_4x" />
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>